--- a/findly-builder/src/app/components/add-faq/add-faq.component.scss
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.scss
@@ -1220,3 +1220,34 @@
 .lh-50{
     line-height: 50px;
 }
+
+.tabs-faqs-modal{
+    border-bottom: 2px solid #F4F4F4;
+    margin-bottom: 30px;
+    .nav-item {
+        margin: 0;
+        .nav-link{
+            border: 0;
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 14px;
+            padding: 10px 0;
+            text-transform: uppercase;
+            margin-right: 30px;
+            position: relative;
+            color: #26344A;
+            &.active{
+                color: #0D6EFD;
+                &::before{
+                    content: "";
+                    position: absolute;
+                    height: 2px;
+                    background: #0D6EFD;
+                    width: 100%;
+                    bottom: -2px;
+                    left: 0;
+                }
+            }
+        }
+    }
+}
