FLY-3761, FLY-3848,FLY-3461, FLY-3462,FLY-3889

--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -590,7 +590,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="filter-btn" (click)="showConfiguredFacet=true">
+                                <div class="filter-btn" (click)="clickConfiguredFacet()">
                                     <img src="assets/icons/facets/rangeslider.svg">
                                 </div>
                             </div>
