--- a/findly-builder/src/app/components/result-insights/result-insights.component.scss
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.scss
@@ -229,9 +229,9 @@
             &.search-results{
                 padding: 0 50px 5px 0px;
             }
-            img{
-                cursor: pointer;
-            } 
+            // img{
+            //     cursor: pointer;
+            // } 
             .img-sec{
                 margin-right: 10px//25px;
             }
