--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -2928,8 +2928,8 @@ display: none !important;
 .sdk-top-down-interface .scroll-top-container{
   position: fixed;
   bottom: 15px;
-  width: 100%;
-  left: 0;
+  width: 8%;
+  left: 45%;
   display: flex;
   align-items: center;
   justify-content: center;
