--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -87,11 +87,12 @@ and open the template in the editor.
             + .slider{
                 background-color: $hoverBlue;
                 box-shadow: 0 0 1px $hoverBlue;
+                border: 1px solid $hoverBlue;
                 &::before{
                     -webkit-transform: translateX(20px);
                     -ms-transform: translateX(20px);
                     transform: translateX(20px);
-                    background-color: $white;
+                    background-color: #FFFFFF;
                 }
                 span{
                     &.yes{
