--- a/findly-builder/src/app/components/result-templates/result-templates.component.scss
+++ b/findly-builder/src/app/components/result-templates/result-templates.component.scss
@@ -525,8 +525,8 @@
         margin-bottom: 8px;
     }
     .show-more-list{
-        display: flex;
-        align-items: center;
+        // display: flex;
+        // align-items: center;
         cursor: pointer;
         font-weight: 500;
         font-size: 12px;
@@ -554,8 +554,8 @@
         padding: 10px 0;
     }
     .show-more-list{
-        display: flex;
-        align-items: center;
+        // display: flex;
+        // align-items: center;
         cursor: pointer;
         font-weight: 500;
         font-size: 12px;
@@ -723,8 +723,8 @@
         }
     }
     .show-more-list{
-        display: inline-flex;
-        align-items: center;
+        // display: inline-flex;
+        // align-items: center;
         cursor: pointer;
         font-weight: 500;
         font-size: 12px;
@@ -782,8 +782,8 @@
         }
     }
     .show-more-list{
-        display: inline-flex;
-        align-items: center;
+        // display: inline-flex;
+        // align-items: center;
         cursor: pointer;
         font-weight: 500;
         font-size: 12px;
@@ -820,8 +820,8 @@
         }
     }
     .show-more-list{
-        display: inline-flex;
-        align-items: center;
+        // display: inline-flex;
+        // align-items: center;
         cursor: pointer;
         font-weight: 500;
         font-size: 12px;
@@ -874,8 +874,8 @@
         }
     }
     .show-more-list{
-        display: inline-flex;
-        align-items: center;
+        // display: inline-flex;
+        // align-items: center;
         cursor: pointer;
         font-weight: 500;
         font-size: 12px;
@@ -1069,8 +1069,8 @@
         }
     }
     .show-more-list{
-        display: inline-flex;
-        align-items: center;
+        // display: inline-flex;
+        // align-items: center;
         cursor: pointer;
         font-weight: 500;
         font-size: 12px;
@@ -1140,8 +1140,8 @@
         }
     }
     .show-more-list{
-        display: inline-flex;
-        align-items: center;
+        // display: inline-flex;
+        // align-items: center;
         cursor: pointer;
         font-weight: 500;
         font-size: 12px;
@@ -1177,8 +1177,8 @@
         }
     }
     .show-more-list{
-        display: inline-flex;
-        align-items: center;
+        // display: inline-flex;
+        // align-items: center;
         cursor: pointer;
         font-weight: 500;
         font-size: 12px;
@@ -1240,8 +1240,8 @@
         }
     }
     .show-more-list{
-        display: inline-flex;
-        align-items: center;
+        // display: inline-flex;
+        // align-items: center;
         cursor: pointer;
         font-weight: 500;
         font-size: 12px;
@@ -1528,8 +1528,8 @@
       }
     }
     .show-more-list{
-        display: inline-flex;
-        align-items: center;
+        // display: inline-flex;
+        // align-items: center;
         cursor: pointer;
         font-weight: 500;
         font-size: 12px;
@@ -1619,8 +1619,8 @@
       }
     }
     .show-more-list{
-        display: inline-flex;
-        align-items: center;
+        // display: inline-flex;
+        // align-items: center;
         cursor: pointer;
         font-weight: 500;
         font-size: 12px;
@@ -1673,8 +1673,8 @@
       }
     }
     .show-more-list{
-        display: inline-flex;
-        align-items: center;
+        // display: inline-flex;
+        // align-items: center;
         cursor: pointer;
         font-weight: 500;
         font-size: 12px;
@@ -1757,8 +1757,8 @@ padding: 10px 20px 10px 20px;
     }
 }
 .show-more-list{
-    display: inline-flex;
-    align-items: center;
+    // display: inline-flex;
+    // align-items: center;
     cursor: pointer;
     font-weight: 500;
     font-size: 12px;
